# Weather_Data_Pipeline

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: config.yaml
dags/: weather_pipeline_dag.py
eda/: exploratory_analysis.ipynb
logger/: logger.py
scripts/: extract.py  load.py  transform.py
