[project]
name = "weather-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==2.9.3",
    "google-re2==1.1.20240702",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "psycopg2>=2.9.11",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["scripts*"]
